# C-H-T-L

./: .gitignore  ANTLR4_USAGE_README.md  BUILD.md  CHTL.g4  CHTLJS_UNQUOTED_LITERALS_DOCS.md  CHTLJavaScript.g4  CHTL_IMPLEMENTATION_SUMMARY.md  CHTL_JS_EXTENSIONS_DOCS.md  CHTL_SYNTAX_STATUS.md  CHTL_TEST_REPORT.md  CHTL编译器开发记录.md  CHTL语法文档.md  CJMOD_DOCS.md  CJmod-advanced-usage.md  CJmod-architecture.md  CJmod-builder-examples.md  CJmod-easy-examples.md  CJmod-examples.md  CJmod-hybrid-design.md  CJmod-js-design.md  CJmod-usage-example.md  CMOD_DOCS.md  CMakeLists.txt  CMakeLists_hybrid.txt  CONSTRAINT_DOCS.md  CUSTOM_DOCS.md  Dockerfile  Dockerfile.dev  FINAL_PROGRESS_REPORT.md  JS_COMPILER_DOCS.md  LATEST_PROGRESS.md  LOCAL_SCRIPT_FIX_REPORT.md  Makefile  ORIGIN_DOCS.md  PROGRESS_REPORT.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  REPAIR_REPORT.md  (+187 more)
App/: CMakeLists.txt  main.cpp
Chtl_Js/: CMakeLists.txt  ChtlJsCompiler.h  ChtlJsContext.cpp  ChtlJsParser.cpp  ChtlJsParser.h  ChtlJsState.cpp  ChtlJsTransformer.cpp  ChtlJsTransformer.h
CmodSystem/: CMakeLists.txt
Common/: CMakeLists.txt  GlobalMap.cpp  GlobalMap.h  Token.h  Types.h
Context/: BasicContext.h  CMakeLists.txt  ChtlContext.h  Chtl_JsContext.h  ContextFactory.h  CssContext.h  JsContext.h  StandardContext.h
Css/: Ast.h  CMakeLists.txt  CssAnalyzer.cpp  CssAnalyzer.h  CssBackend.h  CssBlockExtractor.cpp  CssBlockExtractor.h  CssCompileResult.h  CssCompiler.cpp  CssCompiler.h  CssFindings.h  CssParser.cpp  CssParser.h  CssTokenizer.cpp  CssTokenizer.h  CssTypes.h  HeuristicCssBackend.cpp  HeuristicCssBackend.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  SelfCssBackend.cpp  SelfCssBackend.h  Tokens.h
Generator/: BasicGenerator.h  CMakeLists.txt  ConfigGenerator.cpp  ConfigGenerator.h  CssGenerator.cpp  CssGenerator.h  HtmlGenerator.cpp  HtmlGenerator.h  JsGenerator.cpp  JsGenerator.h  README.md  StandardGenerator.cpp  StandardGenerator.h
Js/: Ast.h  CMakeLists.txt  HeuristicJsBackend.cpp  HeuristicJsBackend.h  JsAnalyzer.cpp  JsAnalyzer.h  JsBackend.h  JsBlockExtractor.cpp  JsCompileResult.h  JsCompiler.cpp  JsCompiler.h  JsFindings.h  JsParser.cpp  JsParser.h  JsTokenizer.cpp  JsTypes.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  SelfJsBackend.cpp  SelfJsBackend.h  Tokens.h
Lexer/: BasicLexer.h  CMakeLists.txt  ConfigLexer.cpp  ConfigLexer.h  StandardLexer.cpp  StandardLexer.h
Loader/: CMakeLists.txt
Module/: CMakeLists.txt
Node/: CMakeLists.txt  Comment.h  Config.h  Custom.h  CustomNode.cpp  CustomNode.h  ElementNode.cpp  ElementNode.h  Import.h  Namespace.h  Node.cpp  Node.h  Operate.h  Origin.h  ScriptNode.cpp  ScriptNode.h  Style.h  StyleNode.cpp  StyleNode.h  Template.h  TemplateNode.cpp  TemplateNode.h  TextNode.cpp  TextNode.h
Parser/: BasicParser.h  CMakeLists.txt  ChtlJsVisitor.cpp  ChtlJsVisitor.h  ChtlVisitor.cpp  ChtlVisitor.h  ConfigParser.cpp  ConfigParser.h  CssVisitor.cpp  CssVisitor.h  JsVisitor.cpp  JsVisitor.h  README.md  StandardParser.cpp  StandardParser.h
Predefine/: CMakeLists.txt  PredefinedCustomElements.h  PredefinedCustomStyles.h  PredefinedCustomVariables.h  PredefinedTemplateElements.h  PredefinedTemplateStyles.h  PredefinedTemplateVariables.h  Registry.h
Scanner/: CMakeLists.txt
Scanner/BridgeScanner/: BridgeScanner.cpp  BridgeScanner.h
Scanner/Segment/: Segment.cpp  Segment.h
State/: BasicState.h  CMakeLists.txt  ChtlState.cpp  ChtlState.h  Chtl_JsState.h  CssState.h  JsState.h  Scope.cpp  StandardState.cpp  StandardState.h  StateFactory.h  Symbol.cpp  SymbolTable.cpp  SymbolTable.h
examples/: CMakeLists.txt  ReactiveModule.cpp  TestModule.cmod  advanced.chtl  animate-example.chtl  antlr_example.cpp  basic_demo.chtl  chtholly-interactive-demo.chtl  chtl-js-enhanced-features.chtl  cjmod-complete-demo.chtl  cjmod-example.md  cjmod-usage.chtl  cjmod_example.cpp  complete_demo.chtl  comprehensive-demo.chtl  error-test.chtl  event-delegation-examples.chtl  hello-world.chtl  hello.chtl  local-script-examples.chtl  script-context-examples.chtl  script-examples.chtl  showcase.chtl  simple.chtl  test-all-features.chtl  test-cjmod-correct-structure.chtl  test-cjmod-submodule.chtl  test-constraint-var.chtl  test-import-export.chtl  test-info-export-restriction.chtl  test-inherit-delete.chtl  test.chtl  unique_ptr_demo.cpp
examples/CJmod/: AdvancedExamples.cpp  AnimateModule.cpp  AsyncFlowModule.cpp  CorrectExamples.cpp  DelegateModule.cpp  PipelineModule.cpp  QueryModule.cpp  ReactiveModule.cpp  RealisticExamples.cpp  TimeTravelModule.cpp
examples/cjmod/: PatternMatchModule.cpp  PipelineModule.cpp
examples/cjmod_example/: README.md
examples/comparison/: TodoItem.comparison.md
examples/hello-world/: hello.chtl
ide/: CMakeLists.txt  README.md
ide/src/: main.cpp
src/: ASTNode.cpp  CHTLCompiler.cpp  CHTLJSCompiler.cpp  CMakeLists.txt  CSSCompiler.cpp  CodeGenerator.cpp  CompilerDispatcher.cpp  JSCompiler.cpp  SymbolTable.cpp  main-simple.cpp  main-simple.cpp.bak  main.cpp  test_chtl_js.cpp  test_chtl_nodes.cpp  test_comment.cpp  test_lexer.cpp  test_node.cpp  test_parser.cpp  test_simple_parser.cpp  test_style_parsing.cpp
tests/: CMakeLists.txt  main.cpp  test_basic_parse.cpp  test_bridge_scanner.cpp  test_ce_equation.cpp  test_ce_simple.cpp  test_chtl_compiler.cpp  test_chtl_js.cpp  test_cmod_system.cpp  test_comment.cpp  test_compilation.cpp  test_components_parse.cpp  test_constraint_debug.cpp  test_constraint_simple.cpp  test_constraints.cpp  test_context_aware_comments.cpp  test_custom_debug.cpp  test_custom_nested.cpp  test_custom_style.cpp  test_custom_var.cpp  test_custom_var_simple.cpp  test_empty_block.cpp  test_empty_block2.cpp  test_h2_in_div.cpp  test_hash_lexer.cpp  test_html_parsing.cpp  test_import_complete.cpp  test_import_debug.cpp  test_import_lexing.cpp  test_import_manager.cpp  test_import_namespace.cpp  test_import_parsing.cpp  test_import_processor.cpp  test_import_resolver.cpp  test_import_simple.cpp  test_import_syntax.cpp  test_import_tokens.cpp  test_lexer.cpp  test_lexer_h2.cpp  test_namespace.cpp  (+18 more)
(+905 files in other folders)
